# porthouse

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-04-porthouse-design.md  2026-03-04-porthouse-implementation.md
hooks/: porthouse-check.sh
src/: alert.rs  cli.rs  config.rs  conflict.rs  daemon.rs  lib.rs  main.rs  process.rs  registry.rs  scanner.rs  tui.rs
tests/: alert_test.rs  config_test.rs  conflict_test.rs  integration_test.rs  registry_test.rs  scanner_test.rs
