[package]
name = "porthouse"
version = "0.1.0"
edition = "2021"
description = "A lighthouse for your ports — monitors, routes, and resolves conflicts across projects"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
listeners = "0.5"
ratatui = "0.29"
crossterm = "0.28"
notify-rust = "4"
signal-hook = "0.3"
dirs = "6"
chrono = "0.4"
anyhow = "1"
libc = "0.2"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
